<resources>
    <string name="app_name">Kainderya</string>
    <string name="register">Register</string>
    <string name="eatery_name">Eatery Name</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="attach_valid_id_picture">Attach Valid ID Picture</string>
    <string name="customer">Customer</string>
    <string name="input_budget">Input Budget</string>
    <string name="login">Login</string>
    <string name="saint_peter_eatery">SAINT PETER EATERY</string>
    <string name="eatery_location">LOCATION: ST.PETER BLDG. 466 \nST UPPER HEAVEN BELOW HELL</string>
    <string name="menu">MENU</string>
    <string name="owner_name">Owner Name</string>
    <string name="update_menu">Update Menu</string>
    <string name="price">Price : _________</string>
    <string name="description_edt_txt">Description : ___________</string>
    <string name="input_eatery_name">Input Eatery Name</string>
    <string name="input_email_address">Input Valid Email Address</string>
    <string name="input_name">Input Name</string>
    <string name="input_password">Input Password</string>
    <string name="input_valid_password">Input Password(atleast 6 character)</string>
    <string name="input_confirm_password">Input Confirm Password</string>
    <string name="password_not_match">Password Not Matched</string>
    <string name="successfully">SUCCESSFULLY</string>
    <string name="uploaded">UPLOADED</string>
    <string name="input_price">Input Price</string>
    <string name="input_description">Input Description</string>
    <string name="description">Description</string>
    <string name="priceTxt">Price</string>
    <string name="price_php">"Price: Php. "</string>
    <string name="title">Title: _________</string>
    <string name="input_title">Input Title</string>
    <string name="address">Address</string>
    <string name="title_edit">Title</string>
    <string name="picture">Picture</string>
    <string name="image">Image</string>
    <string name="input_eatery_address">Input Eatery Address</string>
    <string name="please_wait">Please wait…</string>
    <string name="loading">Loading…</string>
    <string name="no_data">No Menu Data</string>
    <string name="upload_business_permit">Upload Business Permit Image</string>
    <string name="menu1">Menu</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="write_you_review">Write you Review…</string>
    <string name="add_location">Add Location</string>
    <string name="input_latitude">Input Latitude</string>
    <string name="input_longitude">Input Longitude</string>
    <string name="trivia">Trivia</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="reviews">Reviews</string>
    <string name="add_menu">Add Menu</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="review">Review</string>
    <string name="rating">Rating</string>
    <string name="log">Log</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="date">Date</string>
    <string name="show_menu">Show Menu</string>
    <string name="no_reviews">No Reviews</string>
    <string name="title_activity_pick_location">PickLocationActivity</string>
    <string name="server_key">AAAAGgsfwV8:APA91bFCFabnurPZlnNErFNZ0sHHGJrXzMevAUx2lM564yWILIA4ApezQODRqKkBPWAF02JgyxIeKJvSENqRTy1kB_Ez-OV9PRqarAU84paHzbZFpclZvWnXTGIhBz4rrQWPinWsL5bR</string>
    <string name="view_all_menu">View All Menu</string>
    <string name="all_menu">All Menu</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="maps_api_key">AIzaSyDfws2MTSOeJeyIV3xCdmGNZDeQu27bqkE</string>
</resources>