<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/confirm_bg"
    tools:context=".ConfirmUpdateActivity">

    <LinearLayout
        android:id="@+id/success_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:id="@+id/menu_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textColor="@color/menu_txt_clr"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/success_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/successfully"
            android:textColor="@color/menu_txt_clr"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/uploaded_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uploaded"
            android:textColor="@color/menu_txt_clr"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="5dp"
            />

    </LinearLayout>

</RelativeLayout>