<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowMenuActivity">

    <TextView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textColor="@color/menu_txt_clr"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/eatery_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/saint_peter_eatery"
            android:textAlignment="center"
            android:textColor="@color/menu_txt_clr"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eater_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:lineSpacingExtra="5dp"
            android:lines="2"
            android:text="@string/eatery_location"
            android:textAlignment="center"
            android:textColor="@color/menu_txt_clr"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/menu"
            android:textAlignment="center"
            android:textColor="@color/menu_txt_clr"
            android:textSize="50sp"
            android:textStyle="bold" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/menu_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="150dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="@color/menu_item_clr"
                    android:layout_margin="2dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                        android:id="@+id/all_menu_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/all_menu"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        android:layout_gravity="start|center_vertical"
                        android:textAlignment="viewStart"
                        android:textColor="@color/menu_txt_clr"
                        android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/show_hide_menu_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/show"
                            android:layout_margin="5dp"
                            android:drawableEnd="@android:drawable/arrow_down_float"
                            android:textAlignment="viewEnd"
                            android:layout_gravity="end|center_vertical"
                            android:textColor="@color/menu_txt_clr"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/all_menu_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</RelativeLayout>