<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/menu_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/update_menu_bg"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/update_menu_bg"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/update_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_edit"
                android:gravity="center"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/update_menu_bg"
            tools:ignore="NestedWeights" >

            <ImageView
                android:id="@+id/update_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/image"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/update_menu_bg"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/update_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu1"
                android:gravity="center"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/update_menu_bg"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/update_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:gravity="center"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/update_menu_bg"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/update_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/priceTxt"
                android:gravity="center"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:weightSum="2"
        android:visibility="gone"
        android:gravity="center"
        android:layout_below="@id/menu_info_layout"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/edit_menu_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/update_menu_bg"
            android:src="@drawable/ic_edit"
            />

        <ImageView
            android:id="@+id/delete_menu_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/update_menu_bg"
            android:src="@drawable/ic_delete"
            />

    </LinearLayout>

</RelativeLayout>