<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rounded_bg"
    android:orientation="vertical"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        >

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer"
            android:padding="8dp"
            android:textSize="16sp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:layout_alignParentStart="true"
            android:textColor="@color/black"
            tools:ignore="NestedWeights" />


        <TextView
            android:id="@+id/review_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log"
            android:padding="8dp"
            android:textSize="16sp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:layout_toStartOf="@id/delete_lyt"
            android:textColor="@color/black"
            tools:ignore="NestedWeights" />

        <RelativeLayout
            android:id="@+id/delete_lyt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            >


        <ImageView
            android:id="@+id/delete_review_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:textSize="16sp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:src="@drawable/ic_delete"
            />

        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="2dp">

        <TextView
            android:id="@+id/rating_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:padding="8dp"
            android:textSize="16sp"
            android:paddingStart="2dp"
            android:layout_gravity="center_vertical"
            android:paddingEnd="2dp"
            android:textColor="@color/black"
            tools:ignore="NestedWeights" />

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:theme="@style/RatingBar"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        />

    </LinearLayout>

    <TextView
        android:id="@+id/customer_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review"
        android:padding="8dp"
        android:textSize="16sp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        tools:ignore="NestedWeights" />


</LinearLayout>